--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "2.7"
 
 install: python setup.py -q install
-before_script: pip install coverage
+before_script: pip install -r requirements-devel.txt
 script: coverage run --source dadosgovbr setup.py test
-after_success: coverwalls
+after_success: coveralls
